Package: R.filesets
===================

Version: 2.11.0-9000 [2017-02-27]

 o ...
 

Version: 2.11.0 [2017-02-27]

SIGNIFICANT CHANGES:
   
 o Package requires R (>= 3.1.2) and BioC (>= 3.0) both released in
   October 2014.

NEW FEATURES:

 o Now getChecksum() for ChecksumFile defaults to not creating a checksum file
   (which is the default for other types of file), but instead always return
   the checksum of the file by only calculating and in memory.  This prevents
   for instance the equals() test on two different checksum files to generate
   another set of checksum files on themselves.
   
 o Now findByName() for GenericDataFileSet reports on the non-existing
   root paths in error messages.
   
 o GenericDataFile and GenericDataFileSet no longer report on memory (RAM)
   usage of objects.

CLEANUP:

 o dsApply(..., .parallel="future") now used future_lapply() of the future
   package internally.  dsApply() will soon be deprecated (see below).

INSTALLATION:

 o Package no longer needs to depend on listenv.
   
DEPRECATED AND DEFUNCT:

 o Argument 'colClassPatterns' of readDataFrame() for TabularTextFile is
   now defunct.  Use 'colClasses' instead.
 
 o Argument 'files' of extractMatrix() for GenericTabularFileSet is defunct.
 
 o dsApply() with either .parallel = "BiocParallel::BatchJobs"
   or "BatchJobs" is deprecated.  Instead, use future::future_lapply()
   with whatever choice of future::plan() preferred.

 o Defunct argument 'aliased' of getDefaultFullName() for GenericDataFile
   and defunct argument 'alias' of GenericDataFileSet() have been removed.


Version: 2.10.0 [2016-01-04]

SIGNIFICANT CHANGES:
   
 o Package requires R (>= 3.1.2) released October 2014, because
   of its dependency on the listenv package.

NEW FEATURES:

 o Now file sizes are reported using IEC binary prefixes, i.e.
   bytes, KiB, MiB, GiB, TiB, ..., YiB.
   
 o Added hasChecksumFile() for GenericDataFile.
 