@@ -3,7 +3,18 @@ Package: R.filesets
 
 Version: 2.11.0-9000 [2017-02-27]
 
- o ...
+SIGNIFICANT CHANGES:
+   
+ o Package no longer requires Bioconductor.
+
+CLEANUP:
+
+ o Package no longer suggests BatchJobs and BiocParallel.
+
+DEPRECATED AND DEFUNCT:
+
+ o dsApply() with .parallel = "BiocParallel::BatchJobs" and "BatchJobs"
+   are now defunct.  Instead, use future::future_lapply().
  
 
 Version: 2.11.0 [2017-02-27]
